test/parser/raw_identifier.0.stderr
<source>:10:5: error: use of undeclared identifier 'f'
   10 |     r#f();
      |     ~~~
